[package]
name = "twitch_client_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
lazy_static = "1.4.0"
regex = "1.10.3"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
tokio = "1.36.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
